[package]
name = "missionweaveprotocol"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Official Rust SDK for MissionWeaveProtocol"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/missionweaveprotocol/rust-sdk"
homepage = "https://missionweaveprotocol.github.io/"
keywords = ["agents", "protocol", "sdk", "missionweaveprotocol"]
categories = ["api-bindings", "data-structures"]
include = [
  "src/**",
  "schemas/**",
  "conformance/**",
  "PROTOCOL_PIN.json",
  "README.md",
  "LICENSE",
]

[dependencies]
include_dir = "0.7.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.12"

[lib]
name = "missionweaveprotocol"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
