[package]
name = "missionweaveprotocol"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Official Rust SDK for MissionWeaveProtocol"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/missionweaveprotocol/rust-sdk"
homepage = "https://missionweaveprotocol.github.io/"
keywords = ["agents", "protocol", "sdk", "missionweaveprotocol"]
categories = ["api-bindings", "data-structures"]
include = [
  "src/**",
  "schemas/**",
  "conformance/**",
  "cryptography/**",
  "PROTOCOL_PIN.json",
  "README.md",
  "LICENSE",
]

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.38", features = ["derive"] }
ed25519-dalek = "2.2.0"
include_dir = "0.7.4"
jsonschema = { version = "0.48.0", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_json_canonicalizer = "0.3.2"
sha2 = "0.10.9"
thiserror = "2.0.12"

[[bin]]
name = "missionweaveprotocol-conformance"
path = "src/bin/missionweaveprotocol-conformance.rs"

[lib]
name = "missionweaveprotocol"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
